// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFolder should return a Folder 1`] = `
{
  "archiveRecords": [
    {
      "createdAt": 2022-07-19T15:26:31.000Z,
      "displayDate": 2022-06-01T18:44:43.000Z,
      "displayName": "face-in-clouds",
      "fileSystemCompatibleName": "face-in-clouds.gif",
      "files": [],
      "id": 512,
      "status": "status.generic.ok",
      "type": "type.record.image",
      "updatedAt": 2022-07-19T15:30:23.000Z,
    },
  ],
  "createdAt": 2022-07-19T14:00:45.000Z,
  "displayDate": 2022-06-01T18:44:43.000Z,
  "fileSystemCompatibleName": "testing",
  "folders": [
    {
      "archiveRecords": [],
      "createdAt": 2022-07-19T15:26:40.000Z,
      "displayDate": 2022-07-19T15:26:40.000Z,
      "fileSystemCompatibleName": "Internal folder",
      "folders": [],
      "id": 7458,
      "name": "Internal folder",
      "size": 0,
      "updatedAt": 2022-07-19T15:27:06.000Z,
    },
  ],
  "id": 7457,
  "name": "testing",
  "size": 0,
  "updatedAt": 2022-07-19T15:30:22.000Z,
}
`;

exports[`getFolder should return a Folder when DisplayDT is null 1`] = `
{
  "archiveRecords": [
    {
      "createdAt": 2022-07-19T15:26:31.000Z,
      "displayDate": 2022-06-01T18:44:43.000Z,
      "displayName": "face-in-clouds",
      "fileSystemCompatibleName": "face-in-clouds.gif",
      "files": [],
      "id": 512,
      "status": "status.generic.ok",
      "type": "type.record.image",
      "updatedAt": 2022-07-19T15:30:23.000Z,
    },
  ],
  "createdAt": 2022-07-19T14:00:45.000Z,
  "displayDate": undefined,
  "fileSystemCompatibleName": "testing",
  "folders": [
    {
      "archiveRecords": [],
      "createdAt": 2022-07-19T15:26:40.000Z,
      "displayDate": 2022-07-19T15:26:40.000Z,
      "fileSystemCompatibleName": "Internal folder",
      "folders": [],
      "id": 7458,
      "name": "Internal folder",
      "size": 0,
      "updatedAt": 2022-07-19T15:27:06.000Z,
    },
  ],
  "id": 7457,
  "name": "testing",
  "size": 0,
  "updatedAt": 2022-07-19T15:30:22.000Z,
}
`;
